--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/mainmedia.css">
 
 </head>
 
@@ -40,7 +41,7 @@
                         </ol> -->
                     </li>
                     <li class="menu2">
-                        <a href="#pg1">Movie</a>
+                        <a href="#">Movie</a>
                         <ol class="smenu">
                             <li class="smenu1">
                                 <a href="ocean.html">Ocean Waves</a>
@@ -117,7 +118,9 @@
             <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="parallax-bg m1"></div>
+                        <div class="parallax-bg m1">
+                            <!-- <img src="img/main/chihiro.jpeg" alt="바다가들린다 갤러리사진3번"> -->
+                        </div>
                         <div class="txtWrap">
                             <div class="title"><img src="img/main/title_spirited_away.png" alt="센과 치히로의 행방불명"></div>
                             <div class="subtitle">© 2001 Studio Ghibli</div>
@@ -361,14 +364,14 @@
             <div class="kuro kuro5 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
             <div class="movie">
                 <h1 class="moviet afbf">&nbsp;MOVIE&nbsp;</h1>
-                <div class="list">
+                <div class="list p">
                     <div class="poster"><a href="#"><img src="img/main/poster_away.jpeg" alt="센과 치히로의 행방불명"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_howls.jpeg" alt="하울의 움직이는 성"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_mononoke.jpg" alt="원령공주"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_kiki.jpg" alt="마녀배달부 키키"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_laputa.jpg" alt="천공의 성 라퓨타"></a></div>
                 </div>
-                <div class="list">
+                <div class="list p">
                     <div class="poster"><a href="ocean.html"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a>
                     </div>
                     <div class="poster"><a href="#"><img src="img/main/poster_porco.jpg" alt="붉은돼지"></a></div>
@@ -376,12 +379,18 @@
                     <div class="poster"><a href="#"><img src="img/main/poster_arrietty.jpg" alt="아리에티"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_kokuriko.jpg" alt="코쿠리코 언덕에서"></a></div>
                 </div>
-                <div class="list">
+                <div class="list p">
                     <div class="poster"><a href="#"><img src="img/main/poster_ponyo.jpg" alt="포뇨"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_totoro.jpg" alt="이웃집 토토로"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_wind_rises.jpg" alt="바람이 들린다"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_marie.jpg" alt="마리"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_nausicaa.jpg" alt="나우시카"></a></div>
+                </div>
+                <div class="list m">
+                    <div class="poster"><a href="#"><img src="img/main/poster_laputa.jpg" alt="천공의 성 라퓨타"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_kokuriko.jpg" alt="코쿠리코 언덕에서"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_nausicaa.jpg" alt="나우시카"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/tales.jpg" alt="테일스"></a></div>
                 </div>
                 <a href="#" class="moremovie btn">More</a>
             </div>
