--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -96,7 +96,7 @@
                 <div>
                     <ul class="rb">
                         <li><a href="#pg3">OST</a></li>
-                        <li><a href="#pg4">Search</a></li>
+                        <li><a href="#pg4">Subscribe</a></li>
                     </ul>
                 </div>
             </div>
@@ -442,7 +442,7 @@
                 <form class="search">
                     <p>Love STUDIO GHIBLI as much as we do? Sign up for updates and stay in the loop!</p>
                     <div class="formItem">
-                        <input type="search" name="sch" id="sch" class="form_input" placeholder="Search">
+                        <input type="search" name="sch" id="sch" class="form_input" placeholder="Enter your email address">
                         <button type="submit">Subscribe</button>
                     </div>
                 </form>
