--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -27,7 +27,7 @@
                 <button class="cbtn" onclick="sMenu()">×</button>
                 <ul>
                     <li class="menu1">
-                        <a href="#pg">Ghibli Studio</a>
+                        <button>Ghibli Studio</button>
                         <!-- <ol class="smenu">
                             <li>
                                 <a href="#">Home</a>
@@ -41,7 +41,7 @@
                         </ol> -->
                     </li>
                     <li class="menu2">
-                        <a href="#">Movie</a>
+                        <button>Movie</button>
                         <ol class="smenu">
                             <li class="smenu1">
                                 <a href="ocean.html">Ocean Waves</a>
@@ -61,7 +61,7 @@
                         </ol>
                     </li>
                     <li class="menu3">
-                        <a href="#pg2">Ghibli Shop</a>
+                        <button>Ghibli Shop</button>
                         <!-- <ol class="smenu">
                             <li>
                                 <a href="#">지브리 미술관</a>
@@ -72,9 +72,9 @@
                         </ol> -->
                     </li>
                     <li class="menu4">
-                        <a href="#pg3">OST</a>
+                        <button>OST</button>
                     </li>
-                    <li class="menu5"><a href="#footer"><img class="ghilogo" src="./img/ocean/gibrri.png" alt="지브리"></a>
+                    <li class="menu5"><button><img class="ghilogo" src="./img/ocean/gibrri.png" alt="지브리"></button>
                     </li>
                 </ul>
             </nav>
