--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -28,17 +28,17 @@
                 <ul>
                     <li class="menu1">
                         <button>Ghibli Studio</button>
-                        <!-- <ol class="smenu">
+                        <ol class="smenu">
                             <li>
                                 <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="#pg1">Ocean Waves</a>
+                                <a href="#pg1">News</a>
                             </li>
                             <li>
-                                <a href="#pg2">Characters</a>
+                                <a href="#pg1">Event</a>
                             </li>
-                        </ol> -->
+                        </ol>
                     </li>
                     <li class="menu2">
                         <button>Movie</button>
