--- a/001.HTML/013.ghibli_PJ/ocean.html
+++ b/001.HTML/013.ghibli_PJ/ocean.html
@@ -26,7 +26,7 @@
                 <button class="cbtn" onclick="sMenu()">×</button>
                 <ul>
                     <li>
-                        <a href="#pg">Main</a>
+                        <a href="index.html">Home</a>
                         <!-- <ol class="smenu">
                             <li>
                                 <a href="#">Home</a>
