--- a/001.HTML/013.ghibli_PJ/ocean.html
+++ b/001.HTML/013.ghibli_PJ/ocean.html
@@ -83,13 +83,13 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li class="on"><a href="#pg1">Ocean Waves</a></li>
-                        <li><a href="#pg2">Characters</a></li>
+                        <li class="on"><a href="index.html">Studio Ghibli</a></li>
+                        <li><a href="#pg1">Ocean Waves</a></li>
                     </ul>
                 </div>
                 <div>
                     <ul class="rb">
-                        <li><a href="#pg3">Ending</a></li>
+                        <li><a href="#pg2">Characters</a></li>
                         <li><a href="#pg4">Gallery</a></li>
                     </ul>
                 </div>
