--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -44,7 +44,7 @@
                         <button>Movie</button>
                         <ol class="smenu">
                             <li class="smenu1">
-                                <a href="ocean.html">Ocean Waves</a>
+                                <a href="ocean.html" target="_blank">Ocean Waves</a>
                             </li>
                             <li class="smenu2">
                                 <a href="#">Spirited Away</a>
@@ -119,7 +119,6 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="parallax-bg m1">
-                            <!-- <img src="img/main/chihiro.jpeg" alt="바다가들린다 갤러리사진3번"> -->
                         </div>
                         <div class="txtWrap">
                             <div class="title"><img src="img/main/title_spirited_away.png" alt="센과 치히로의 행방불명"></div>
@@ -372,7 +371,7 @@
                     <div class="poster"><a href="#"><img src="img/main/poster_laputa.jpg" alt="천공의 성 라퓨타"></a></div>
                 </div>
                 <div class="list p">
-                    <div class="poster"><a href="ocean.html"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a>
+                    <div class="poster"><a href="ocean.html" target="_blank"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a>
                     </div>
                     <div class="poster"><a href="#"><img src="img/main/poster_porco.jpg" alt="붉은돼지"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_cat.jpg" alt="고양이의 보은"></a></div>
