--- a/001.HTML/013.ghibli_PJ/ocean.html
+++ b/001.HTML/013.ghibli_PJ/ocean.html
@@ -26,7 +26,7 @@
                 <button class="cbtn" onclick="sMenu()">×</button>
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" target="_blank">Home</a>
                         <!-- <ol class="smenu">
                             <li>
                                 <a href="#">Home</a>
@@ -83,7 +83,7 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li class="on"><a href="index.html">Studio Ghibli</a></li>
+                        <li class="on"><a href="index.html" target="_blank">Studio Ghibli</a></li>
                         <li><a href="#pg1">Ocean Waves</a></li>
                     </ul>
                 </div>
