--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -43,33 +43,33 @@
                     <li class="menu2">
                         <button>Movie</button>
                         <ol class="smenu">
-                            <li class="smenu1">
+                            <li>
                                 <a href="ocean.html" target="_blank">Ocean Waves</a>
                             </li>
-                            <li class="smenu2">
+                            <li>
                                 <a href="#">Spirited Away</a>
                             </li>
-                            <li class="smenu3">
+                            <li>
                                 <a href="#">Princess Mononoke</a>
                             </li>
-                            <li class="smenu4">
+                            <li>
                                 <a href="#">Howl's Moving Castle</a>
                             </li>
-                            <li class="smenu4">
+                            <li>
                                 <a href="#">MY NEIGHBOR TOTORO</a>
                             </li>
                         </ol>
                     </li>
                     <li class="menu3">
                         <button>Ghibli Shop</button>
-                        <!-- <ol class="smenu">
+                        <ol class="smenu">
                             <li>
                                 <a href="#">지브리 미술관</a>
                             </li>
                             <li>
                                 <a href="#">지브리 전시회</a>
                             </li>
-                        </ol> -->
+                        </ol>
                     </li>
                     <li class="menu4">
                         <button>OST</button>
