--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -64,10 +64,10 @@
                         <button>Ghibli Shop</button>
                         <ol class="smenu">
                             <li>
-                                <a href="#">지브리 미술관</a>
+                                <a href="#">Movie</a>
                             </li>
                             <li>
-                                <a href="#">지브리 전시회</a>
+                                <a href="#">Album</a>
                             </li>
                         </ol>
                     </li>
