--- a/001.HTML/012.Blue_PJ/exposition.html
+++ b/001.HTML/012.Blue_PJ/exposition.html
@@ -30,13 +30,13 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
-                    <li data-image="images/mli2.jpeg"><a href="#">EXPOSITIONS</a></li>
+                    <li data-image="images/fire.jpeg"><a href="#">EXPOSITIONS</a></li>
                     <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="index.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
+                    <img src="images/mbt3.jpeg" alt="Yves Klein">
                 </div>
             </nav>
         </header>
