--- a/001.HTML/013.ghibli_PJ/ocean.html
+++ b/001.HTML/013.ghibli_PJ/ocean.html
@@ -255,7 +255,7 @@
                             alt="지브리로고"></abbr></a>
                 <a href="#">OCEAN WAVES</a>
         </footer>
-        <script src="./JS/submain.js"></script>
+        <script src="JS/submain.js"></script>
 
 </body>
 
