--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -143,63 +143,63 @@
                     <!-- onclick 속성
                     클릭이벤트속성 : 클릭이벤트 발생시
                 JS코드를 실행함 -> 여기서는 함수호출 -->
-                    <a href="#" onclick="goMv('XY1bIZL7brc')">
-                        <img src="images/fanta.jpeg" alt="한여름의 판타지아">
+                    <a href="#" onclick="goMv('4EVtLIbdMGo')">
+                        <img src="images/deadman.jpeg" alt="데드맨">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>한여름의 판타지아</li>
-                            <li>김새벽, 이와세 료</li>
-                            <li>드라마</li>
+                            <li>데드맨</li>
+                            <li>조진웅, 김희애</li>
+                            <li>범죄</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('6KXysgJCAhw')">
-                        <img src="images/lovedrugs.jpeg" alt="러브 & 드럭스">
+                    <a href="#" onclick="goMv('LpVR8ZPXDQo')">
+                        <img src="images/almostlove.jpeg" alt="우견니">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>러브 & 드럭스</li>
-                            <li>제이크 질렌할,앤 해서웨이</li>
-                            <li>코미디, 멜로/로맨스</li>
+                            <li>우견니</li>
+                            <li>서약함</li>
+                            <li>멜로/로맨스</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('y2AAVYBwgyg')">
-                        <img src="images/wonder.jpeg" alt="원더">
+                    <a href="#" onclick="goMv('CASvEXDk7HI')">
+                        <img src="images/argylle.jpeg" alt="아가일">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>원더</li>
-                            <li>줄리아 로버츠</li>
-                            <li>드라마</li>
+                            <li>아가일</li>
+                            <li>헨리 카빌</li>
+                            <li>액션</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('2D4nzQduvQ8')">
-                        <img src="images/rud.jpeg" alt="러덜리스">
+                    <a href="#" onclick="goMv('BR5YCAxjbwc')">
+                        <img src="images/dune2.jpeg" alt="듄 파트2">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>러덜리스</li>
-                            <li>빌리 크루덥</li>
-                            <li>드라마, 코미디</li>
+                            <li>듄: 파트2</li>
+                            <li>티모시 샬라메</li>
+                            <li>액션</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('kU1mHiXbzyM')">
-                        <img src="images/mow.jpeg" alt="나우 이즈 굿">
+                    <a href="#" onclick="goMv('OAMDkBrItoc')">
+                        <img src="images/snow.jpeg" alt="스노우 퍼핀즈">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>나우 이즈 굿</li>
-                            <li>다코타 패닝</li>
-                            <li>드라마</li>
+                            <li>스노우 퍼핀즈</li>
+                            <li>조니 뎁</li>
+                            <li>애니메이션</li>
                         </ol>
                     </a></li>
                 <li>
-                    <a href="#" onclick="goMv('2DWIexD6qgA')">
-                        <img src="images/op.jpeg" alt="오펀: 천사의 비밀">
+                    <a href="#" onclick="goMv('Bldf9SWRPFM')">
+                        <img src="images/wonka.jpeg" alt="웡카">
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>오펀: 천사의 비밀</li>
-                            <li>베라 파미가</li>
-                            <li>스릴러, 공포</li>
+                            <li>웡카</li>
+                            <li>티모시 샬라메</li>
+                            <li>판타지</li>
                         </ol>
                     </a></li>
             </ul>
