--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -355,41 +355,41 @@
         </section>
         <!-- /******************************************* cont3 *******************************************/ -->
         <section id="pg2" class="cont cont3">
-            <div class="kuro kuro1 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300">
+            <div class="kuro kuro1 wow animate__animated animate__bounceInDown" data-wow-duration="1s" data-wow-delay=".3s" data-wow-offset="300">
                 <img src="img/main/kuro02.svg" alt="쿠로"></div>
-            <div class="kuro kuro2 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
-            <div class="kuro kuro3 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
-            <div class="kuro kuro4 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
-            <div class="kuro kuro5 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro2 wow animate__animated animate__bounceInDown" data-wow-duration="1.2s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro3 wow animate__animated animate__bounceInDown" data-wow-duration="1.3s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro4 wow animate__animated animate__bounceInDown" data-wow-duration="1.3s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro5 wow animate__animated animate__bounceInDown" data-wow-duration="1.3s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
             <div class="movie">
                 <h1 class="moviet afbf">&nbsp;MOVIE&nbsp;</h1>
                 <div class="list p">
-                    <div class="poster"><a href="#"><img src="img/main/poster_away.webp" alt="센과 치히로의 행방불명"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_howls.webp" alt="하울의 움직이는 성"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_mononoke.webp" alt="원령공주"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_kiki.webp" alt="마녀배달부 키키"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_laputa.webp" alt="천공의 성 라퓨타"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s" data-wow-offset="100"><a href="#"><img src="img/main/poster_away.webp" alt="센과 치히로의 행방불명"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.1s" data-wow-delay=".2s" data-wow-offset="100"><a href="#"><img src="img/main/poster_howls.webp" alt="하울의 움직이는 성"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".3s" data-wow-offset="100"><a href="#"><img src="img/main/poster_mononoke.webp" alt="원령공주"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.3s" data-wow-delay=".4s" data-wow-offset="100"><a href="#"><img src="img/main/poster_kiki.webp" alt="마녀배달부 키키"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.4s" data-wow-delay=".5s" data-wow-offset="100"><a href="#"><img src="img/main/poster_laputa.webp" alt="천공의 성 라퓨타"></a></div>
                 </div>
                 <div class="list p">
-                    <div class="poster"><a href="ocean.html" target="_blank"><img src="img/main/poster_ocean.webp" alt="바다가들린다"></a>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s" data-wow-offset="100"><a href="ocean.html" target="_blank"><img src="img/main/poster_ocean.webp" alt="바다가들린다"></a>
                     </div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_porco.webp" alt="붉은돼지"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_cat.webp" alt="고양이의 보은"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_arrietty.webp" alt="아리에티"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_kokuriko.webp" alt="코쿠리코 언덕에서"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.1s" data-wow-delay=".2s" data-wow-offset="100"><a href="#"><img src="img/main/poster_porco.webp" alt="붉은돼지"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".3s" data-wow-offset="100"><a href="#"><img src="img/main/poster_cat.webp" alt="고양이의 보은"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.3s" data-wow-delay=".4s" data-wow-offset="100"><a href="#"><img src="img/main/poster_arrietty.webp" alt="아리에티"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.4s" data-wow-delay=".5s" data-wow-offset="100"><a href="#"><img src="img/main/poster_kokuriko.webp" alt="코쿠리코 언덕에서"></a></div>
                 </div>
                 <div class="list p">
-                    <div class="poster"><a href="#"><img src="img/main/poster_ponyo.webp" alt="포뇨"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_totoro.webp" alt="이웃집 토토로"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_wind_rises.webp" alt="바람이 들린다"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_marie.webp" alt="마리"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_nausicaa.webp" alt="나우시카"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s" data-wow-offset="100"><a href="#"><img src="img/main/poster_ponyo.webp" alt="포뇨"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.1s" data-wow-delay=".2s" data-wow-offset="100"><a href="#"><img src="img/main/poster_totoro.webp" alt="이웃집 토토로"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".3s" data-wow-offset="100"><a href="#"><img src="img/main/poster_wind_rises.webp" alt="바람이 들린다"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.3s" data-wow-delay=".4s" data-wow-offset="100"><a href="#"><img src="img/main/poster_marie.webp" alt="마리"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.4s" data-wow-delay=".5s" data-wow-offset="100"><a href="#"><img src="img/main/poster_nausicaa.webp" alt="나우시카"></a></div>
                 </div>
                 <div class="list m">
-                    <div class="poster"><a href="#"><img src="img/main/poster_laputa.webp" alt="천공의 성 라퓨타"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_kokuriko.webp" alt="코쿠리코 언덕에서"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/poster_nausicaa.webp" alt="나우시카"></a></div>
-                    <div class="poster"><a href="#"><img src="img/main/tales.webp" alt="테일스"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.1s" data-wow-delay=".1s" data-wow-offset="100"><a href="#"><img src="img/main/poster_laputa.webp" alt="천공의 성 라퓨타"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".2s" data-wow-offset="100"><a href="#"><img src="img/main/poster_kokuriko.webp" alt="코쿠리코 언덕에서"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.3s" data-wow-delay=".s" data-wow-offset="100"><a href="#"><img src="img/main/poster_nausicaa.webp" alt="나우시카"></a></div>
+                    <div class="poster wow animate__animated animate__fadeInLeft" data-wow-duration="1.4s" data-wow-delay=".4s" data-wow-offset="100"><a href="#"><img src="img/main/tales.webp" alt="테일스"></a></div>
                 </div>
                 <a href="#" class="moremovie btn">More</a>
             </div>
