--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/artist.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/artmedia.css">
-    <script src="JS/main.js"></script>
+    <script src="JS/core.js"></script>
 </head>
 <body>
     <div class="wrapBox">
