--- a/001.HTML/012.Blue_PJ/brtist.html
+++ b/001.HTML/012.Blue_PJ/brtist.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/artmedia.css">
     <link rel="stylesheet" href="css/brtmedia.css">
-    <script src="JS/main.js"></script>
+    <script src="JS/core.js"></script>
 </head>
 <body>
     <div class="wrapBox">
