--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -148,10 +148,7 @@
                                     vain and conniving Witch of the Waste. Embarking on an incredible adventure to lift
                                     the curse, she finds refuge in Howl's magical moving castle where she becomes
                                     acquainted with Markl, Howl's apprentice, and a hot-headed fire demon named
-                                    Calcifer.<br>
-                                    As the true power of Howl’s wizardry is revealed, and his relationship with Sophie
-                                    deepens, our young grey heroine finds herself fighting to protect them both from a
-                                    dangerous war of sorcery that threatens their world.
+                                    Calcifer.
                                 </p>
                             </div>
                         </div>
@@ -217,10 +214,6 @@
                                     It is tradition for all young witches to leave their families on the night of a full
                                     moon to learn their craft. That night comes for Kiki, who follows her dream and
                                     embarks on the experience of a lifetime.
-
-                                    With her chatty black cat, Jiji, she flies off to find the perfect spot in a faraway
-                                    city. There, a bakery owner befriends Kiki and helps her start her own business: A
-                                    high-flying delivery service.
                                 </p>
                             </div>
                         </div>
@@ -236,12 +229,7 @@
                                     above the Adriatic Sea, keen to recapture the romanticism of flight lost during the
                                     war. Many have turned to air piracy, in amongst which a hero emerges: a man with a
                                     pig's head, known as Porco Rosso (once an Italian air force pilot called Marco
-                                    Paggot).<br>
-                                    As mercenary law-enforcer of the skies and oceans, Porco Rosso protects cruise ships
-                                    from the air pirates above them. When his actions are challenged by Curtis, an
-                                    American who flies with the pirates, Porco Rosso is forced to defend his honour
-                                    against this newcomer, which leads him to Fio, a feisty young engineer who rebuilds
-                                    Porco's plane for the big dogfight.
+                                    Paggot).
                                 </p>
                             </div>
                         </div>
@@ -317,8 +305,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
                 <div class="swiper-pagination"></div>
             </div>
         </section>
