--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -175,18 +175,18 @@
         </address>
         <ul class="sns">
             <li>
+                <a href="https://www.instagram.com/cgv_korea/" target="_blank" title="인스타그램 바로가기">
+                    <img src="images/insta.png" alt="인스타그램"><span class="ir">인스타그램 바로가기</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://www.facebook.com/CJCGV" target="_blank" title="페이스북 바로가기">
-                    <span class="ir">페이스북 바로가기</span>
+                    <img src="images/face.png" alt="인스타그램"><span class="ir">페이스북 바로가기</span>
                 </a>
             </li>
             <li>
                 <a href="https://twitter.com/cj_cgv" target="_blank" title="트위터 바로가기">
-                    <span class="ir">트위터 바로가기</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/cgv_korea/" target="_blank" title="인스타그램 바로가기">
-                    <span class="ir">인스타그램 바로가기</span>
+                    <img src="images/x.png" alt="인스타그램"><span class="ir">트위터 바로가기</span>
                 </a>
             </li>
         </ul>
