--- a/001.HTML/006.CGV_PJ/003.site/index.html
+++ b/001.HTML/006.CGV_PJ/003.site/index.html
@@ -185,8 +185,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com/cj_cgv" target="_blank" title="트위터 바로가기">
-                    <img src="images/x.png" alt="인스타그램"><span class="ir">트위터 바로가기</span>
+                <a href="https://twitter.com/cj_cgv" target="_blank" title="X 바로가기">
+                    <img src="images/x.png" alt="인스타그램"><span class="ir">X 바로가기</span>
                 </a>
             </li>
         </ul>
