--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -197,7 +197,7 @@
                             </ul>
                         </li>
                         <li>CREATED BY <i>BOSEONG KANG</i></li>
-                        <li>CONTACT : 010-3362-1793</li>
+                        <li>CONTACT : (+82) 10-3362-1793</li>
                     </ul>
                 </div>
                 <nav class="footCbx">
