--- a/001.HTML/000.T_Pj/3.Dune2_Pj/index.html
+++ b/001.HTML/000.T_Pj/3.Dune2_Pj/index.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
     </header>
-    <main class="cont">
+    <main class="cont cont1">
         <div id="cbx">
             <div class="cat">
                 <div class="ci"><img src="./img/DUNE_POSTER_1.jpg" alt="DUNE_POSTER_1">
