--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <header id="header">
+            <div class="nav-box">
+                <h1 class="logo pc"><a href="#"><img src="images/logo.jpeg" alt="목샤요가원"></a></h1>
+            </div>
+            <div class="menu-box"><label for="switch-global" style="filter:inherit" class="btn-menu"></label></div>
+        </header>
+    </div>
 </body>
 </html>
