--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -10,7 +10,7 @@
     <div id="wrapper">
         <header id="header">
             <div class="nav-box">
-                <h1 class="logo pc"><a href="#"><img src="images/logo.jpeg" alt="목샤요가원"></a></h1>
+                <h1 class="logo pc"><a href="#"><img src="images/logo.jpeg" alt="목샤요가원"><i>moksha</i></a></h1>
                 <div class="menu-box"><label for="switch-global" style="filter:inherit" class="btn-menu"></label></div>
             </div>
         </header>
