--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -17,7 +17,16 @@
 
         <main>
             <section class="top-wrapper">
-                
+                <div class="top-layer-wrapper fade-letters-pc">
+                    <p class="address fade-letters">
+                        Moksha Yoga, Gwangju-si, Gyeonggi-do, Republic of Korea
+                    </p>
+                </div>
+                <div class="first-section fade gray-scale">
+                    <div class="inner-wrapper">
+                        이너웹퍼
+                    </div>
+                </div>
             </section>
         </main>
     </div>
