--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moksha yoga and meditation. 하타요가, 테라피, 명상</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/common.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    
 </head>
 <body>
     <div id="wrapper">
@@ -24,11 +27,30 @@
                 </div>
                 <div class="first-section fade gray-scale">
                     <div class="inner-wrapper">
-                        이너웹퍼
+                        <div class="swiper first-view-box swiper17 swiper-fade swiper-initialized swiper-horizontal swiper-android swiper-watch-progress swiper-backface-hidden">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                <img src="images/first-view-img1@2x.jpeg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="images/first-view-img2.jpeg.webp" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="images/first-view-img4.jpeg.webp" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="images/first-view-img5@2x.jpeg" />
+                              </div>
+                            </div>
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-pagination"></div>
+                          </div>
                     </div>
                 </div>
             </section>
         </main>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
