--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -14,7 +14,10 @@
         <header id="header">
             <div class="nav-box">
                 <h1 class="logo pc"><a href="#"><img src="images/logo.jpeg" alt="목샤요가원"><i>moksha</i></a></h1>
-                <div class="menu-box"><label for="switch-global" style="filter:inherit" class="btn-menu"></label></div>
+                <div class="menu-box">
+                    <a href="https://blog.naver.com/moksha_yoga/222953822605" target="_blank" class="counsel">상담하기</a>
+                    <label for="switch-global" style="filter:inherit" class="btn-menu"></label>
+                </div>
             </div>
         </header>
 
@@ -36,16 +39,30 @@
                                 <img src="images/first-view-img2.jpeg.webp" />
                               </div>
                               <div class="swiper-slide">
-                                <img src="images/first-view-img4.jpeg.webp" />
-                              </div>
-                              <div class="swiper-slide">
-                                <img src="images/first-view-img5@2x.jpeg" />
+                                  <img src="images/first-view-img3@2x.jpeg" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="images/first-view-img4.jpeg.webp" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="images/first-view-img5@2x.jpeg" />
                               </div>
                             </div>
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-pagination"></div>
+                            <!-- <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div> -->
                           </div>
+                    </div>
+                </div>
+                <div class="second-section">
+                    <div class="description-box fade-letters-pc">
+                        <h2 class="title fade letters">山明水淸</h2>
+                        <div class="text-box fade-letters">
+                            <p class="text">요가의 정취는</p>
+                            <p class="text">몸에 활력을 되찾아 주고</p>
+                            <p class="text">정신과 육체의 피로를 덜어준다</p>
+                            <p class="text">한적한 산 속 한옥이 주는 평화는</p>
+                            <p class="text">어떤 우울한 마음도 사라지게 한다</p>
+                        </div>
                     </div>
                 </div>
             </section>
