--- a/001.HTML/014.moksha/index.html
+++ b/001.HTML/014.moksha/index.html
@@ -13,7 +13,7 @@
     <div id="wrapper">
         <header id="header">
             <div class="nav-box">
-                <h1 class="logo pc"><a href="#"><img src="images/logo.jpeg" alt="목샤요가원"><i>moksha</i></a></h1>
+                <h1 class="logo pc"><a href="#"><img src="images/moksha_logo.png" alt="목샤요가원"><i>moksha</i></a></h1>
                 <div class="menu-box">
                     <a href="https://blog.naver.com/moksha_yoga/222953822605" target="_blank" class="counsel">상담하기</a>
                     <label for="switch-global" style="filter:inherit" class="btn-menu"></label>
